--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Weinsel-Wehr</title>
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
   </head>
