updated robots/meta description

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Weinsel-Wehr</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Weininsel-Wehr is a mobile-optimized web application providing essential resources and training materials for fire departments in Bavaria, Germany. Access lectures, quizzes, and PDF uploads to enhance your firefighting knowledge."
+        />
+        <title>Weinsel-Wehr</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
