update robots again

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             name="description"
             content="Weininsel-Wehr is a mobile-optimized web application providing essential resources and training materials for fire departments in Bavaria, Germany. Access lectures, quizzes, and PDF uploads to enhance your firefighting knowledge."
         />
+        <meta name="robots" content="noindex, nofollow" />
         <title>Weinsel-Wehr</title>
         <link rel="icon" type="image/x-icon" href="/favicon.png" />
     </head>
