--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         />
         <meta name="robots" content="noindex, nofollow" />
         <title>Weinsel-Wehr</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/favicon.webp" />
     </head>
     <body>
         <div id="root"></div>
