refactor(components): :zap: improved image loading

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <meta name="robots" content="noindex, nofollow" />
         <title>Weinsel-Wehr</title>
         <link rel="icon" type="image/x-icon" href="/favicon.webp" />
+        <link rel="preload" href="/assets/ffwlogo.webp" as="image" />
     </head>
     <body>
         <div id="root"></div>
