--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-            rel="stylesheet"
-        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
@@ -15,6 +11,12 @@
         <title>Weinsel-Wehr</title>
         <link rel="icon" type="image/x-icon" href="/favicon.webp" />
         <link rel="preload" href="/assets/ffwlogo.webp" as="image" />
+        <link
+            rel="preload"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+            as="font"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div id="root"></div>
