preloaded static fonts

--- a/index.html
+++ b/index.html
@@ -13,9 +13,59 @@
         <link rel="preload" href="/assets/ffwlogo.webp" as="image" />
         <link
             rel="preload"
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+            href="/assets/fonts/poppins/Poppins-Black.ttf"
             as="font"
-            rel="stylesheet"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-ExtraBold.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-ExtraLight.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-Light.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-Medium.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-Regular.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-SemiBold.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="/assets/fonts/poppins/Poppins-Thin.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin="anonymous"
         />
     </head>
     <body>
